plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

javafx {
    version = '21.0.2'
    modules = ['javafx.controls', 'javafx.fxml']
}

application {
    mainClass = 'com.restaurantos.App'
}

tasks.withType(JavaExec).configureEach {
    jvmArgs = [
        '--add-opens', 'javafx.controls/javafx.scene.control.skin=ALL-UNNAMED'
    ]
}
